# fastapi-startkit-modules

./: .gitignore  CLAUDE.md  docker-compose.yml  mysql-init.sql  orm.sqlite3  pyproject.toml  queue.py  readme.md  taskiq_poc.py  tinker.py
example/: artisan  db.py  pyproject.toml
example/bootstrap/: application.py
example/config/: database.py
example/config-app/: .env.example  .env.production  .env.testing  pyproject.toml
example/config-app/bootstrap/: application.py
example/config-app/config/: redis.py
example/config-app/tests/: test_config_app.py
example/console-app/: README.md  pyproject.toml
example/console-app/bootstrap/: application.py
example/console-app/commands/: example_command.py
example/console-app/config/: ai.py  logging.py
example/console-app/providers/: __init__.py  console.py
example/database-app/: .env  .env.example  .env.testing  .gitignore  artisan  connection.py  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  tinker.py  todo.md
example/database-app/app/commands/: list_users_command.py
example/database-app/app/models/: Media.py  Post.py  PostTag.py  Tag.py  User.py  __init__.py  category.py  course.py  lesson.py  media.py  post.py  post_tag.py  profile.py  review.py  tag.py  user.py
example/database-app/bootstrap/: application.py
example/database-app/config/: app.py  database.py  logging.py
example/database-app/databases/migrations/: 2026_04_12_000000_create_blog_tables.py  2026_04_26_110113_create_users.py  2026_04_27_145006_create_categories_table.py  2026_04_27_145006_create_profiles_table.py  2026_04_27_145007_create_courses_table.py  2026_04_27_145008_create_course_user_table.py  2026_04_27_145008_create_lessons_table.py  2026_04_27_145009_create_reviews_table.py
example/database-app/databases/seeds/: category_seeder.py  course_seeder.py  database_seeder.py  post_seeder.py  review_seeder.py  user_seeder.py
example/database-app/docker/mysql/: init.sql
example/database-app/providers/: app_provider.py  console_provider.py  fastapi_provider.py
example/database-app/routes/: api.py  student.py
example/database-app/tests/: conftest.py  test_case.py  test_registration.py
example/fastapi-app/: README.md  pyproject.toml
example/fastapi-app/bootstrap/: application.py
example/fastapi-app/config/: fastapi.py
example/fastapi-app/providers/: fastapi_provider.py
example/fastapi-app/routes/: api.py
example/inertia-app/: package-lock.json  package.json  pyproject.toml  vite.config.js
example/inertia-app/app/models/: Ticket.py
example/inertia-app/bootstrap/: application.py
example/inertia-app/config/: database.py  logging.py
example/inertia-app/databases/: __init__.py
example/inertia-app/databases/factories/: TicketFactory.py
example/inertia-app/databases/migrations/: 2026_04_21_000001_create_users_table.py  2026_04_21_000002_create_tickets_table.py  2026_04_21_000003_create_ticket_tags_table.py  2026_04_21_000004_create_ticket_messages_table.py
example/inertia-app/databases/seeders/: TicketSeeder.py
example/inertia-app/databases/seeds/: database_seeder.py
example/inertia-app/providers/: fastapi_provider.py
example/inertia-app/resources/js/: app.jsx
example/inertia-app/routes/: web.py
example/inertia-app/templates/: index.html
example/inertia-pingcrm-app/: .env.example  .gitignore  index.py  package.json  pyproject.toml  tinker.py  tsconfig.json  vite.config.js
example/inertia-pingcrm-app/app/models/: Account.py  Contact.py  Organization.py  Ticket.py  User.py
example/inertia-pingcrm-app/authentication/middlewares/: auth.py
example/inertia-pingcrm-app/bootstrap/: application.py
example/inertia-pingcrm-app/config/: database.py  logging.py  storage.py
example/inertia-pingcrm-app/databases/factories/: AccountFactory.py  ContactFactory.py  OrganizationFactory.py  UserFactory.py
example/inertia-pingcrm-app/databases/migrations/: 2026_04_21_000001_create_users_table.py  2026_04_23_114912_create_accounts_table.py  2026_04_23_114916_create_organizations_table.py  2026_04_23_114935_create_contacts_table.py  2026_04_23_114951_create_password_resets_table.py
example/inertia-pingcrm-app/databases/seeds/: database_seeder.py
example/inertia-pingcrm-app/providers/: fastapi_provider.py
example/inertia-pingcrm-app/resources/js/: app.tsx  route.ts
example/inertia-pingcrm-app/routes/: web.py
example/inertia-pingcrm-app/templates/: index.html
example/inertia-pingcrm-app/tests/: test_profile_controller.py
example/onefile-app/: main.py
example/providers/: fastapi_provider.py
example/routes/: api.py
example/singleline-app/: app.py
example/vite-app/: .gitignore  package-lock.json  package.json  pyproject.toml  vite.config.js
example/vite-app/bootstrap/: application.py
example/vite-app/providers/: fastapi_provider.py
example/vite-app/resources/css/: app.css
example/vite-app/resources/js/: app.js  app.ts
example/vite-app/routes/: web.py
example/vite-app/templates/: index.html
fastapi_startkit/: CLAUDE.md  db.py  masonite.sqlite3  pyproject.toml  verify_cli.py
fastapi_startkit/databases/migrations/: 2025_12_12_144243_create_users.py
fastapi_startkit/fastapi_startkit/: application.py  console.py
fastapi_startkit/fastapi_startkit/commands/: __init__.py
fastapi_startkit/fastapi_startkit/facades/: Config.pyi
fastapi_startkit/fastapi_startkit/fastapi/commands/: __init__.py
fastapi_startkit/fastapi_startkit/fastapi/providers/: __init__.py
fastapi_startkit/fastapi_startkit/logging/channels/: BaseChannel.py  SlackChannel.py
fastapi_startkit/fastapi_startkit/providers/: Provider.py
fastapi_startkit/fastapi_startkit/tests/: test_case.py
fastapi_startkit/src/: masonite.sqlite3  tinker.py
fastapi_startkit/src/fastapi_startkit/: __init__.py  application.py  console.py  todo.md
fastapi_startkit/tests/: conftest.py
fastapi_startkit/tests/environment/: test_env.py
fastapi_startkit/tests/inertia/: test_inertia.py  test_inertia_response.py  test_middleware.py
fastapi_startkit/tests/storage/: test_storage.py
(+478 files in other folders)
