[project]
name = "fastapi-startkit-modules"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotty-dict>=1.3.1",
    "fastapi>=0.135.3",
    "inflection>=0.5.1",
    "pendulum>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.38",
]

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
]
