[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cleo>=2.1.0",
    "fastapi-startkit",
]

[tool.uv.sources]
fastapi-startkit = { path = "../fastapi_startkit", editable=true }

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
]
