[project]
name = "fastapi-startkit"
version = "0.1.3"
description = "Fastapi_Startkit components"
authors = [
    {name = "Bedram Tamang", email = "tmgbedu@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotty-dict>=1.3.1",
    "pendulum (>=3.1.0,<4.0.0)",
    "inflection>=0.5.1",
    "requests (>=2.32.5,<3.0.0)",
    "cleo>=0.8.1",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
fastapi = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
]
database = [
    "aiosqlite>=0.22.1",
    "sqlalchemy[asyncio]>=2.0.38",
]
masoniteorm = [
    "masonite-orm (>=3.0.0,<4.0.0)",
]

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"
