[project]
name = "fastapi-startkit"
version = "0.1.3"
description = "Fastapi_Startkit components"
authors = [
    {name = "Bedram Tamang", email = "tmgbedu@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotty-dict>=1.3.1",
    "pendulum (>=3.1.0,<4.0.0)",
    "inflection>=0.5.1",
    "requests (>=2.32.5,<3.0.0)",
    "cleo>=2.1.0,<3.0.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
fastapi = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
]
sqlite = [
    "aiosqlite>=0.22.1",
    "sqlalchemy[asyncio]>=2.0.38",
]

postgres = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.38",
]

mysql = [
    "aiomysql>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.38",
]

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"
