[project]
name = "fastapi-startkit"
version = "0.13.6"
description = "Fastapi Starter kit components"
authors = [
    {name = "Bedram Tamang", email = "tmgbedu@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotty-dict>=1.3.1",
    "pendulum (>=3.1.0,<4.0.0)",
    "inflection>=0.5.1",
    "requests (>=2.32.5,<3.0.0)",
    "cleo>=2.1.0,<3.0.0",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
fastapi = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
]
database = [
    "faker>=40.13.0",
    "sqlalchemy[asyncio]>=2.0.38",
]

sqlite = [
    "aiosqlite>=0.22.1"
]

postgres = [
    "asyncpg>=0.29.0",
]

mysql = [
    "aiomysql>=0.2.0",
]

vite=[
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "twine>=6.2.0",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F401"]
fixable = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[tool.uv]
workspace = { members = ["application", "example/*"] }
