[project]
name = "Console Application Example"
version = "0.1.0"
description = "A simple application to demonstrate the console application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-startkit",
]

[tool.uv.sources]
fastapi-startkit = { path = "../../fastapi_startkit", editable=true }
