[project]
name = "vite-example"
version = "0.1.0"
description = "Vite + FastAPI example using fastapi-startkit"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.15.0",
    "fastapi-startkit[fastapi,database,postgres]",
    "jinja2>=3.1",
]

[tool.uv.sources]
fastapi-startkit = { path = "../../fastapi_startkit", editable = true }

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
]
