[project]
name = "inertia-example"
version = "0.1.0"
description = "Vite + FastAPI example using fastapi-startkit"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "faker>=40.15.0",
    "fastapi-startkit[fastapi,database,postgres]",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
fastapi-startkit = { path = "../../fastapi_startkit", editable = true }

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
